# nexus-zkvm

./: .gitignore  Cargo.toml  HypernovaTreeFolding.md  Psycho-virtual-README.md  SHA256_Chunking_Types.md  pretty_logs.py  tree_folding_spec.md
core/src/prover/hypernova/: error.rs  mod.rs  types.rs
core/src/prover/nova/: circuit.rs  error.rs  types.rs
folding-benches/: BENCHMARK.md  Cargo.toml  README.md
folding-benches/benches/: accs_folding.rs  nimfs_folding.rs  nimfs_folding_test.rs
folding-benches/benches/shared/: mod.rs
folding-benches/src/: lib.rs
jolt/: Cargo.toml
nova/: Cargo.toml  LCCS_FOLDING_ISSUE.md
nova-benches/: Cargo.toml
nova-benches/benches/shared/: mod.rs
nova/examples/: linearization_demo.rs  parallel_tree_fold_example.rs  poseidon_performance.rs  sequential_sha256_example.rs
nova/src/: absorb.rs  bench_utils.rs  lib.rs
nova/src/ccs/: README.md  ccs_fold.rs  challenge_generation.rs  challenge_generation_circuit.rs  lccs_fold.rs  lccs_folding.rs  linearization.rs  mod.rs  sha256_constraint.rs
nova/src/circuits/hypernova/: mod.rs
nova/src/circuits/hypernova/sequential/: augmented.rs  mod.rs
nova/src/circuits/nova/: mod.rs
nova/src/circuits/nova/pcd/: augmented.rs  mod.rs  tree.rs
nova/src/circuits/nova/pcd/compression/: error.rs
nova/src/circuits/nova/sequential/: augmented.rs  mod.rs
nova/src/circuits/supernova/: augmented.rs  mod.rs
nova/src/examples/: hypernova_simple.rs
nova/src/folding/cyclefold/: mod.rs
nova/src/folding/cyclefold/quaternary/: mod.rs
nova/src/folding/cyclefold/secondary/: mod.rs
nova/src/folding/hypernova/: README.md  accs_folding.rs  mod.rs  nimfs.rs  util.rs
nova/src/folding/hypernova/cyclefold/: mod.rs
nova/src/folding/hypernova/cyclefold/nimfs/: mod.rs
nova/src/folding/hypernova/ml_sumcheck/: data_structures.rs  mod.rs
nova/src/folding/nova/cyclefold/: mod.rs
nova/src/gadgets/cyclefold/: secondary.rs
nova/src/gadgets/cyclefold/hypernova/: mod.rs  primary.rs
nova/src/gadgets/cyclefold/nova/: mod.rs  primary.rs
nova/src/gadgets/emulated/: mod.rs  short_weierstrass.rs
nova/src/parallel_tree/: block_pool.rs  mod.rs  parallel_tree_folder.rs  scheduler.rs  sha256_chain_folder.rs  task.rs  worker.rs
nova/src/provider/: zeromorph.rs
nova/src/r1cs/: mod.rs
nova/src/shuffling/: chaum_pedersen.rs  circuit.rs  data_structures.rs  encryption.rs  error.rs  mod.rs  optimized_alloc.rs  optimized_hash.rs  player_encryption.rs  prove.rs  public_key_setup.rs  setup.rs  utils.rs
nova/src/shuffling/rs_shuffle/: bit_generation.rs  circuit.rs  data_structures.rs  mod.rs  permutation.rs  witness_preparation.rs
nova/src/test_utils/: mod.rs  tracing.rs
nova/src/tree_folding/: fold_driver.rs  fold_reducer.rs  hypernova_fold_reducer.rs  linearization_augmented_circuit.rs  mod.rs
nova/src/tree_folding/circuit/: mod.rs  sequential_sha256.rs  sha256.rs  sumcheck.rs
nova/src/tree_folding/circuit/sumcheck/: mod.rs
nova/src/tree_folding/mangrove/: mod.rs  sha256_chain.rs  sha256_chain_builder.rs  sha256_leaf.rs
nova/src/tree_folding/mangrove/circuit/: mangrove_leaf.rs  mod.rs  sha256_leaf_circuit.rs  sha256_var.rs
spartan/: Cargo.toml
tree-folding/shuffling/: Cargo.toml  DESIGN.md  PROFILING_GUIDE.md
tree-folding/shuffling/benches/: shuffle_bench.rs
tree-folding/shuffling/src/: circuit.rs  data_structures.rs  encryption.rs  error.rs  lib.rs  poseidon_config.rs  prove.rs  setup.rs  utils.rs
vm/src/: memory.rs
vm/src/circuit/: step.rs  test.rs
vm/src/memory/: paged.rs  path.rs
