[workspace]
resolver = "2"
members = [
    "runtime",
    "examples",
    "vm",
    "cli",
    "cli/progress-bar",
    "config",
    "config/serde_wrapper",
    "network",
    "network/rpc/common",
    "network/rpc/traits",
    "nova",
    "spartan",
    "core",
    "jolt",
    "sdk", 
    "macro",
    "macro/profiler",
]
default-members = [
    "vm",
    "cli",
    "network",
    "nova",
    "runtime",
    "spartan",
    "core",
    "sdk",
]
exclude = ["nova-benches"]

[workspace.package]
edition = "2021"
version = "0.2.4"
authors = ["The Nexus Team <hello@nexus.xyz>"]
homepage = "https://nexus.xyz/"
repository = "https://github.com/nexus-xyz/nexus-zkvm/"
keywords = ["nexus", "zero-knowledge", "zkvm", "cryptography", "proofs"]
categories = ["cryptography"]
publish = false

[workspace.dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elf = { version = "0.7", default-features = false, features = ["std"] }

jsonrpsee = { version = "0.23", default-features = false }

sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4.3" }

ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", default-features = false, features = [
    "constraints",
    "sponge",
    "crh",
    "merkle_tree",
] }
ark-std = { version = "0.5.0", default-features = false, features = ["std"] }

ark-snark = { git = "https://github.com/arkworks-rs/snark.git", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark.git", default-features = false, features = ["std"] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git", default-features = false, features = ["std"] }

ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std", "asm"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std"] }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std", "derive"] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std"] }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit.git", default-features = false, features = ["std"] }

ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std", "curve"] }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std"] }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std", "curve"] }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std"] }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["std", "curve"] }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra.git", features = ["bls12_381_curve"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-snark = { git = "https://github.com/arkworks-rs/snark.git" }
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit.git" }

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"
debug = true
