[package]
name = "nova-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", features = ["sponge"] }

ark-pallas = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra.git" }

criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

nexus-nova = { path = "../nova", default-features = false }

[features]
default = ["parallel"]
parallel = ["nexus-nova/parallel"]

[[bench]]
name = "nova"
harness = false

[[bench]]
name = "nova_public_parameter_generation"
harness = false

[[bench]]
name = "hypernova"
harness = false
