[package]
name = "nexus-shuffling"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-serialize = "0.4.0"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "sponge"] }
# ark-spartan = { path = "../../spartan" }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "shuffle-bench"
path = "benches/shuffle_bench.rs"

[dev-dependencies]
tracing-subscriber = "0.3"
structopt = "0.3"
rand = "0.8"