[package]
name = "nexus-shuffling"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = "0.5.0"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-serialize = "0.5.0"
ark-bn254 = "0.5.0"
ark-ed-on-bn254 = { version = "0.5.0", features = ["r1cs"] }
ark-grumpkin = "0.5.0"
ark-groth16 = "0.5.0"
ark-pallas = { version = "0.5.0", features = ["r1cs"] }
ark-vesta = "0.5.0"
ark-snark = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["r1cs", "sponge"] }
ark-spartan = { path = "../../spartan" }
merlin = "3.0"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing-subscriber = "0.3"

[[bin]]
name = "shuffle-groth16-full"
path = "src/bin/shuffle_groth16_full.rs"

[dev-dependencies]
tracing-subscriber = "0.3"
structopt = "0.3"
rand = "0.8"
