[package]
name = "nexus-shuffling"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-serialize = { workspace = true }
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { version = "0.5.0", features = ["r1cs", "std"] }
ark-grumpkin = { workspace = true }
ark-groth16 = { version = "0.5.0", features = ["std"] }
ark-pallas = { workspace = true, features = ["r1cs"] }
ark-vesta = { workspace = true }
ark-snark = { version = "0.5.0" }
ark-crypto-primitives = { workspace = true, features = ["r1cs", "sponge"] }
ark-spartan = { path = "../../spartan" }
nexus-nova = { path = "../../nova" }
merlin = "3.0"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing-subscriber = "0.3"
rayon = { version = "1.8.0", optional = true }

[features]
default = ["parallel", "std"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-std/std",
    "ark-relations/std",
    "ark-r1cs-std/std",
    "ark-serialize/std",
    "ark-crypto-primitives/std",
    "ark-groth16/std",
]
parallel = [
    "rayon",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
    "ark-crypto-primitives/parallel",
    "ark-r1cs-std/parallel",
]

[[bin]]
name = "shuffle-groth16-full"
path = "src/bin/shuffle_groth16_full.rs"

[dev-dependencies]
tracing-subscriber = "0.3"
structopt = "0.3"
rand = "0.8"
